Agregado de promociones

--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>FlyHigh</title>
+    <title>FlyHigh - Ingresa tus datos</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -75,10 +75,10 @@
               </div>
               <div class="col-md-1 col-md-offset-1"><h4>Sexo:</h4></div>
               <label class="col-md-2 form-check-label">
-                <input class="form-check-input" type="radio" name="male" id="male" value="option0" checked=""> Hombre
+                <input class="form-check-input" type="radio" name="maleFemale" id="male" value="option0" checked=""> Hombre
               </label>
               <label class="col-md-2 form-check-label">
-                <input class="form-check-input" type="radio" name="female" id="female" value="option0"> Mujer
+                <input class="form-check-input" type="radio" name="maleFemale" id="female" value="option0"> Mujer
               </label>
             </div>
             <div class="row menuOptions form-group">
