--- a/bootstrap-3.3.7-dist/FrontPage.html
+++ b/bootstrap-3.3.7-dist/FrontPage.html
@@ -28,14 +28,14 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">FlyHigh</a>
+          <a class="navbar-brand smoothScroll" href="#main">FlyHigh</a>
         </div>
       </div>
     </nav>
 
   <!-- Menu con opcion e imagen de fondo -->
   <div class="parallax container-fluid">
-    <div class="row">
+    <div class="row" id="main">
       <div class="col-md-8 col-md-offset-2 mainMenu" >
         <div class="centerText"> <h4> Elegí tu vuelo </h4> </div>
         <div class="form-group row menuOptions">
@@ -74,7 +74,7 @@
           </div>
           <div class="col-md-3 row">
             <div class="col-md-3">
-                <button class="btn btn-default btn-xs leftButton" type="button" id="spinDown" data-target="adultCount">
+                <button class="btn btn-default btn-xs leftButton spinDown" type="button" data-target="adultCount">
                   <small></small><span class="glyphicon glyphicon-chevron-down"></span></small>
                 </button>
             </div>
@@ -82,7 +82,7 @@
               <input type="text" id="adultCount" class="form-control input-number" value="0">
             </div>
             <div class="col-md-1">
-                <button class="btn btn-default btn-xs rightButton" type="button" id="spinUp" data-target="adultCount">
+                <button class="btn btn-default btn-xs rightButton spinUp" type="button" data-target="adultCount">
                   <small></small><span class="glyphicon glyphicon-chevron-up"></span></small>
                 </button>
             </div>
@@ -92,15 +92,15 @@
           </div>
           <div class="col-md-3   row">
             <div class="col-md-3">
-                <button class="btn btn-default btn-xs leftButton" type="button" id="spinDown" data-target="adultCount">
+                <button class="btn btn-default btn-xs leftButton spinDown" type="button" data-target="ninosCount">
                   <small></small><span class="glyphicon glyphicon-chevron-down"></span></small>
                 </button>
             </div>
             <div class="col-md-5">
-              <input type="text" id="adultCount" class="form-control input-number" value="0">
+              <input type="text" id="ninosCount" class="form-control input-number" value="0">
             </div>
             <div class="col-md-1">
-                <button class="btn btn-default btn-xs rightButton" type="button" id="spinUp" data-target="adultCount" name="lbtn">
+                <button class="btn btn-default btn-xs rightButton spinUp" type="button" data-target="ninosCount" name="lbtn">
                   <small></small><span class="glyphicon glyphicon-chevron-up"></span></small>
                 </button>
             </div>
@@ -111,11 +111,94 @@
           <button type="button" class="btn btn-primary">Buscar</button>
         </div>
       </div>
-
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-md-offset-1" id="promoBtn">
+        <a href="#promo" class="smoothScroll">
+          <button type="button" class="btn btn-warning btn-lg">Promociones</button>
+        </a>
+      </div>
     </div>
   </div>
 
-  <div style="height:1000px;background-color:black;font-size:36px"></div>
+  <div class="container-fluid" >
+    <div class="jumbotron jumbotron-fluid" >
+      <h1 style="text-align: center;">Aguante FlyHigh</h1>      
+      <p style="text-align: justify;">>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac magna vulputate, commodo diam vitae, rutrum justo. Etiam sed ligula leo. Donec ultricies quam eget euismod dictum. Cras hendrerit felis id elit blandit fermentum. Mauris ut est dolor. Cras malesuada metus lacus, id ultrices velit sodales at. Fusce ut dapibus turpis. Sed sed ultricies lectus, non eleifend enim. Aenean dui dui, lobortis vel bibendum et, luctus sed libero. Suspendisse rutrum lectus quis justo cursus, eget finibus justo porta. Donec iaculis nisl nulla, at volutpat ex facilisis ut. Sed luctus ut orci dictum fermentum. Vestibulum facilisis aliquam tortor, vel faucibus metus varius vel. Curabitur odio nisl, pellentesque interdum dignissim id, auctor vel sem.</p>
+    </div>
+  </div>
+
+  <div class="container-fluid parallax" id="promo" style="height: 1000px;">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1 mainMenu">
+        <h1 class="centerText">Promociones</h1>
+        <div class="row menuOptions">
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="./images/New-York.jpg" target="_blank">
+                <img src="./images/New-York.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p>Nueva York</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="./images/London.jpg" target="_blank">
+                <img src="./images/London.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p>Londres</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="./images/Paris.jpg" target="_blank">
+                <img src="./images/Paris.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p>Paris</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="./images/BuenosAires.jpg" target="_blank">
+                <img src="./images/BuenosAires.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p>Buenos Aires</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="./images/Taipei.JPG" target="_blank">
+                <img src="./images/Taipei.JPG" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p>Taipei</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a href="./images/Sydney.jpg" target="_blank">
+                <img src="./images/Sydney.jpg" alt="Lights" style="width:100%">
+                <div class="caption">
+                  <p>Sidney</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
 
   </body>
 </html>
