Agregado menu de filtros en la pagina de eleccion. Arreglado el menu dropdown de tipo de documento que cambiaba de valor. Agregadas fotos de los prototipos

--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -54,10 +54,10 @@
               </div>
 
               <div class="input-group-btn col-md-1 col-md-offset-1">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">DNI <span class="caret"></span></button>
+                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="documentDropDown">- <span class="caret"></span></button>
                   <ul class="dropdown-menu">
-                    <li><a href="#">DNI</a></li>
-                    <li><a href="#">Pasaporte</a></li>
+                    <li><a href="#" id="dni">DNI</a></li>
+                    <li><a href="#" id="passport">Pasaporte</a></li>
                   </ul>
                 </div>
               <div class="col-md-4 col-md-offset-1">
