--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -31,7 +31,68 @@
         </div>
       </div>
     </nav>
-    
+
+    <div class="container-fluid ">
+      <div class="row form-group">
+        <div class="col-md-2 col-md-offset-1 mainMenu">
+          <div class="row form-group">
+            <div class="col-md-12 centerText"> <h4>Filtros</h4> </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-md-12 col-md-offset-1 filterMenu">
+              <div class="row col-md-12 centerText"><h4>  Aerolineas</h4></div>
+              <!-- aca poner algo que agarre las aerolineas disponibles -->
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-md-12 filterMenu">
+              <div class="row">
+                <div class="col-md-12 centerText"><h4>Precio</h4></div>
+              </div>
+              <div class="row">
+                <div>
+                  <label class="col-md-1 col-from-label" for="minPrice">
+                    <h5>Desde: </h5>
+                  </label>
+                </div>
+                <div class="col-md-6 col-md-offset-3">
+                  <input type="text" class="form-control" id="minPrice">
+                </div>
+              </div>
+              <div class="row">
+                <div>
+                  <label class="col-md-1 col-from-label" for="maxPrice">
+                    <h5>Hasta: </h5>
+                  </label>
+                </div>
+                <div class="col-md-6 col-md-offset-3">
+                  <input type="text" class="form-control" id="maxPrice">
+                </div>
+              </div>
+              <div class="row">
+                <label class="col-md-6 form-check-label">
+                  <input class="form-check-input" type="radio" name="currencyType" id="usd" value="option0" checked=""> USD
+                </label>
+                <label class="col-md-6 form-check-label">
+                  <input class="form-check-input" type="radio" name="currencyType" id="ars" value="option0"> ARS
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-md-4">
+              <button type="button" class="btn btn-primary" id="clearFilters">Limpiar filtros</button>
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-md-4">
+              <button type="button" class="btn btn-primary" id="applyFilters">Filtrar</button>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </body>
 
