Agregado: Funcionalidad a la pagina choosepage, para que busque y muestre los vuelos. Agregado funcionalidad a la pagina de informacion, para que agregue tantos formularios como personas van a viajar. Hecho el ttemplate sobre como vamos a mostrar los vuelos.

--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>FlyHigh - Elegi tu vuelo</title>
+    <title>FlyHigh</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
+    <script type="text/javascript" src="js/choosePage.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -89,11 +92,11 @@
               <button type="button" class="btn btn-primary" id="applyFilters">Filtrar</button>
             </div>
           </div>
-          </div>
         </div>
+        <iframe class="col-md-offset-1 iframeStyle" id="iframe-id">
+        </iframe>
+      </div>
       </div>
     </div>
-
   </body>
-
-  </html>
+</html>
