--- a/bootstrap-3.3.7-dist/InfoPage.html
+++ b/bootstrap-3.3.7-dist/InfoPage.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
+    <script type="text/javascript" src="js/infoPage.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,69 +32,67 @@
           </div>
         </div>
       </nav>
-
-      <div class="backgroundimage container-fluid ">
+      <div class="container-fluid ">
         <div class="row">
-          <div class="col-md-8 col-md-offset-2 mainMenu">
-            <div class="centerText"><h4>Ingrese los datos del adulto 1</h4></div>
-            <div class="row menuOptions form-group">
-              <label class="col-md-1 col-from-label" for="nameInput">
-                <h4>Nombre: </h4>
-              </label>
-              <div class="col-md-3 col-md-offset-1">
-                <input type="text" class="form-control" id="nameInput" placeHolder="Nombre">
+          <div class="col-md-8 col-md-offset-2 mainMenu" id="personsDiv">
+            <template id="personTemplate">
+              <div class="centerText" id="title"><h4></h4></div>
+              <div class="row menuOptions form-group">
+                <label class="col-md-1 col-from-label" for="nameInput">
+                  <h4>Nombre: </h4>
+                </label>
+                <div class="col-md-3 col-md-offset-1">
+                  <input type="text" class="form-control" id="nameInput" placeHolder="Nombre">
+                </div>
+                <div class="col-md-4 col-md-offset-1"><h4>Tipo de documento:</h4></div>
               </div>
-              <div class="col-md-4 col-md-offset-1"><h4>Tipo de documento:</h4></div>
-            </div>
-            <div class="row menuOptions form-group">
-              <label class="col-md-1 col-from-label" for="lastNameInput">
-                <h4>Apellido:</h4>
-              </label>
-              <div class="col-md-3 col-md-offset-1">
-                <input type="text" class="form-control" id="lastNameInput" placeHolder="Apellido">
-              </div>
+              <div class="row menuOptions form-group">
+                <label class="col-md-1 col-from-label" for="lastNameInput">
+                  <h4>Apellido:</h4>
+                </label>
+                <div class="col-md-3 col-md-offset-1">
+                  <input type="text" class="form-control" id="lastNameInput" placeHolder="Apellido">
+                </div>
 
-              <div class="input-group-btn col-md-1 col-md-offset-1">
-                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="documentDropDown">- <span class="caret"></span></button>
-                  <ul class="dropdown-menu">
-                    <li><a href="#" id="dni">DNI</a></li>
-                    <li><a href="#" id="passport">Pasaporte</a></li>
-                  </ul>
-                </div>
-              <div class="col-md-4 col-md-offset-1">
-                <input type="text" class="form-control" id="documentInput" placeHolder="Documento">
-              </div>
-            </div>
-            <div class="row menuOptions form-group">
-              <div class="form-group">
-                <div class="col-md-2 col-from-label" for="birthDateInput">
-                  <h4>Fecha de nacimiento:</h4>
-                </div>
-                <div class="col-md-3">
-                  <input type="date" class="form-control" id="birthDateInput" placeHolder="DD/MM/AAA">
+                <div class="input-group-btn col-md-1 col-md-offset-1">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="documentDropDown">- <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                      <li><a href="#" id="dni">DNI</a></li>
+                      <li><a href="#" id="passport">Pasaporte</a></li>
+                    </ul>
+                  </div>
+                <div class="col-md-4 col-md-offset-1">
+                  <input type="text" class="form-control" id="documentInput" placeHolder="Documento">
                 </div>
               </div>
-              <div class="col-md-1 col-md-offset-1"><h4>Sexo:</h4></div>
-              <label class="col-md-2 form-check-label">
-                <input class="form-check-input" type="radio" name="maleFemale" id="male" value="option0" checked=""> Hombre
-              </label>
-              <label class="col-md-2 form-check-label">
-                <input class="form-check-input" type="radio" name="maleFemale" id="female" value="option0"> Mujer
-              </label>
-            </div>
-            <div class="row menuOptions form-group">
-              <div class="col-md-1">
-                <button type="button" class="btn btn-primary" id="backButton">Volver</button>
+              <div class="row menuOptions form-group">
+                <div class="form-group">
+                  <div class="col-md-2 col-from-label" for="birthDateInput">
+                    <h4>Fecha de nacimiento:</h4>
+                  </div>
+                    <div class="col-md-3">
+                      <input type="date" class="form-control" id="birthDateInput" placeHolder="DD/MM/AAA">
+                    </div>
+                </div>
+                <div class="col-md-1 col-md-offset-1"><h4>Sexo:</h4></div>
+                <label class="col-md-2 form-check-label">
+                  <input class="form-check-input" type="radio" name="maleFemale" id="male" value="option0" checked=""> Hombre
+                </label>
+                <label class="col-md-2 form-check-label">
+                  <input class="form-check-input" type="radio" name="maleFemale" id="female" value="option0"> Mujer
+                </label>
               </div>
-              <div class="col-md-1 col-md-offset-9">
-                <button type="button" class="btn btn-primary" id="nextButton">Ir al pago</button>
+              <div class="row menuOptions form-group" id="buttonsRow" style="display:none">
+                <div class="col-md-1">
+                  <button type="button" class="btn btn-primary" id="backButton">Volver</button>
+                </div>
+                <div class="col-md-1 col-md-offset-9">
+                  <button type="button" class="btn btn-primary" id="nextButton">Ir al pago</button>
+                </div>
               </div>
-            </div>
-
+            </template>
           </div>
         </div>
       </div>
-
   </body>
-
-  </html>
+</html>
