--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">FlyHigh</a>
+          <a class="navbar-brand" href="FrontPage.html">FlyHigh</a>
         </div>
       </div>
     </nav>
