--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -14,8 +14,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/myjs.js"></script>
-    <script type="text/javascript" src="js/choosePage.js"></script>
+    <!-- <script type="text/javascript" src="js/myjs.js"></script> -->
+    <script type="text/javascript" src="js/flights.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -38,48 +38,44 @@
     <div class="container-fluid ">
       <div class="row form-group">
         <div class="col-md-2 col-md-offset-1 mainMenu">
-          <div class="row form-group">
-            <div class="col-md-12 centerText"> <h4>Filtros</h4> </div>
+          <div class="form-group centerText">
+            <h4>Filtros</h4> 
           </div>
-          <div class="row form-group">
-            <div class="col-md-12 col-md-offset-1 filterMenu">
-              <div class="row col-md-12 centerText"><h4>  Aerolineas</h4></div>
+          <div class="form-group centerText filterMenu">
+            <h4>Aerolineas</h4>
               <!-- aca poner algo que agarre las aerolineas disponibles -->
-            </div>
           </div>
-          <div class="row form-group">
-            <div class="col-md-12 filterMenu">
-              <div class="row">
-                <div class="col-md-12 centerText"><h4>Precio</h4></div>
-              </div>
-              <div class="row">
-                <div>
-                  <label class="col-md-1 col-from-label" for="minPrice">
-                    <h5>Desde: </h5>
-                  </label>
-                </div>
-                <div class="col-md-6 col-md-offset-3">
-                  <input type="text" class="form-control" id="minPrice">
-                </div>
-              </div>
-              <div class="row">
-                <div>
-                  <label class="col-md-1 col-from-label" for="maxPrice">
-                    <h5>Hasta: </h5>
-                  </label>
-                </div>
-                <div class="col-md-6 col-md-offset-3">
-                  <input type="text" class="form-control" id="maxPrice">
-                </div>
-              </div>
-              <div class="row">
-                <label class="col-md-6 form-check-label">
-                  <input class="form-check-input" type="radio" name="currencyType" id="usd" value="option0" checked=""> USD
-                </label>
-                <label class="col-md-6 form-check-label">
-                  <input class="form-check-input" type="radio" name="currencyType" id="ars" value="option0"> ARS
+          <div class="row form-group filterMenu">
+            <div class="centerText">
+              <h4>Precio</h4>
+            </div>
+            <div class="row">
+              <div>
+                <label class="col-md-1 col-md-offset-1 col-from-label" for="minPrice">
+                  <h5>Desde: </h5>
                 </label>
               </div>
+              <div class="col-md-6 col-md-offset-2">
+                <input type="text" class="form-control" id="minPrice">
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <label class="col-md-1 col-md-offset-1 col-from-label" for="maxPrice">
+                  <h5>Hasta: </h5>
+                </label>
+              </div>
+              <div class="col-md-6 col-md-offset-2">
+                <input type="text" class="form-control" id="maxPrice">
+              </div>
+            </div>
+            <div class="row">
+              <label class="col-md-5 col-md-offset-1 form-check-label">
+                <input class="form-check-input" type="radio" name="currencyType" id="usd" value="option0" checked=""> USD
+              </label>
+              <label class="col-md-5 form-check-label">
+                <input class="form-check-input" type="radio" name="currencyType" id="ars" value="option0"> ARS
+              </label>
             </div>
           </div>
           <div class="row form-group">
@@ -93,8 +89,18 @@
             </div>
           </div>
         </div>
-        <iframe class="col-md-offset-1 iframeStyle" id="iframe-id">
-        </iframe>
+
+        <div class="col-md-9">
+          <div class="row">
+            <div class="col-md-offset-1 col-md-10 mainMenu pre-scrollable" id="vuelosDiv">   
+            </div>            
+          </div>
+          
+        </div>
+
+        <!--<iframe class="col-md-offset-1 iframeStyle" id="iframe-id">
+        </iframe> -->
+
       </div>
       </div>
     </div>
