Agregado ordenamiento y boton de compra

--- a/bootstrap-3.3.7-dist/FlightsTemplate.html
+++ b/bootstrap-3.3.7-dist/FlightsTemplate.html
@@ -7,11 +7,12 @@
         <div class="col-md-3 col-md-offset-1 departureHourInfo"></div>
         <div class="col-md-2"><p>Duracion:</p></div>
         <div class="col-md-3 centerText duration"></div>
+        <div class="col-md-1 buy"></div>
       </div>
       <div class="row">
         <div class="col-md-1 col-md-offset-1"><p>Llega: </p></div>
         <div class="col-md-3 col-md-offset-1 arrivalHourInfo" ></div>
-        <div class="col-md-2 col-md-offset-3"><p>Precio:</p></div>
+        <div class="col-md-2"><p>Precio:</p></div>
         <div class="col-md-1 price"></div>
       </div>
     </div>
