--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>FlyHigh</title>
+    <title>FlyHigh - Elegí tu vuelo</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -92,8 +92,28 @@
 
         <div class="col-md-9">
           <div class="row">
-            <div class="col-md-offset-1 col-md-10 mainMenu pre-scrollable" id="vuelosDiv">   
+            <div class="col-md-5 col-md-offset-1 mainMenu">
+              <div class="row">
+                <div class="col-md-5">
+                    <p>Ordenar por:</p>
+                </div>
+                <div class="col-md-3">
+                  <div class="dropdown">
+                    <button class="btn btn-warning dropdown-toggle" type="button" id="orderBy" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <p> - - - </p>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                      <button class="dropdown-item" id="prMin" type="button">Menor precio</button>
+                      <button class="dropdown-item" id="minDur" type="button">Menor duración</button>
+                      <button class="dropdown-item" id="airID" type="button">Aerolínea</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>            
+          </div>
+          <div class="row">
+            <div class="col-md-offset-1 col-md-10 flightMenu pre-scrollable" id="vuelosDiv"></div>
           </div>
           
         </div>
