display flight deals

--- a/bootstrap-3.3.7-dist/FrontPage.html
+++ b/bootstrap-3.3.7-dist/FrontPage.html
@@ -133,66 +133,9 @@
 
   <div class="container-fluid parallax" id="promo" style="height: 1000px;">
     <div class="row">
-      <div class="col-md-10 col-md-offset-1 mainMenu">
+      <div id=promos class="col-md-10 col-md-offset-1 mainMenu">
         <h1 class="centerText">Promociones</h1>
-        <div class="row menuOptions">
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a href="./images/city.jpg" target="_blank">
-                <img src="./images/city.jpg" alt="Lights" style="width:100%">
-                <div class="caption" id="promo1">
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a href="./images/city.jpg" target="_blank">
-                <img src="./images/city.jpg" alt="Lights" style="width:100%">
-                <div class="caption" id="promo2">
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a href="./images/city.jpg" target="_blank">
-                <img src="./images/city.jpg" alt="Lights" style="width:100%">
-                <div class="caption" id="promo3">
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a href="./images/city.jpg" target="_blank">
-                <img src="./images/city.jpg" alt="Lights" style="width:100%">
-                <div class="caption" id="promo4">
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a href="./images/city.jpg" target="_blank">
-                <img src="./images/city.jpg" alt="Lights" style="width:100%">
-                <div class="caption" id="promo5">
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a href="./images/city.jpg" target="_blank">
-                <img src="./images/city.jpg" alt="Lights" style="width:100%">
-                <div class="caption" id="promo6">
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
+        <!-- JS retrieveDeals() -->
       </div>
     </div> 
   </div>
