--- a/bootstrap-3.3.7-dist/ChoosePage.html
+++ b/bootstrap-3.3.7-dist/ChoosePage.html
@@ -23,6 +23,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
   </head>
 
   <body class="backgroundimage">
@@ -30,7 +31,9 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="FrontPage.html">FlyHigh</a>
+          <a class="navbar-left smoothScroll" href="FrontPage.html">
+            <img src="./flyhigh.jpg" height="50" class="d-inline-block align-top">
+          </a>
         </div>
       </div>
     </nav>
